fix overview routes, fix sidebar alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -39,8 +39,8 @@ img {
 	padding-bottom: 20px;
 }
 
-.p-t-20 {
-	padding-top: 20px;
+.p-t-10 {
+	padding-top: 10px;
 }
 
 pre {
